# url-alias

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/url_alias/: main.py
src/url_alias/api/v1/: api.py  public.py
src/url_alias/db/: __init__.py  database.py  model.py  repository.py  schema.py
src/url_alias/db/migration/: env.py
src/url_alias/db/migration/versions/: 4d33664f5801_statistic.py  831296591100_create_tables.py  d28a445c13da_statistic.py
src/url_alias/domains/aliases/: constants.py  dependencies.py  models.py  repository.py  routers.py  schemas.py  services.py  utils.py
src/url_alias/domains/statistics/: dependencies.py  models.py  repository.py  routers.py  schemas.py  services.py
src/url_alias/domains/users/: dependencies.py  models.py  repository.py  routers.py  schemas.py  security.py  services.py
src/url_alias/shared/: __init__.py  config.py  logging.py
